--- a/Bitcoin Prediction .ipynb
+++ b/Bitcoin Prediction .ipynb
@@ -437,9 +437,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e31e39c0-790c-4b1e-83cf-2b0e08dddfdc",
+   "metadata": {},
+   "source": [
+    "## Conclusion:\n",
+    "After my simulation of buy and sell bitcoin, we can calculate the sharpe ratio is 0.11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fd4ad55-3773-4c1c-a48b-f99b92db78fe",
+   "id": "430cce62-e064-49f9-bfcf-e79c36fb11f9",
    "metadata": {},
    "outputs": [],
    "source": []
