--- a/Bitcoin Prediction .ipynb
+++ b/Bitcoin Prediction .ipynb
@@ -103,10 +103,11 @@
    "id": "3b825725",
    "metadata": {},
    "source": [
+    "## Bitcoin price data is nonstationary\n",
     "Autocorrelation function (ACF) is used for determinate whether bitcoin price is stationary or nonstationary. <br> \n",
     "Due to the autocorrelation is remain nearly +1, it represents a strong linear relationship between each observation and its lagged value. Bitcoin price suggests that the time series is highly persistent and exhibits a strong trend so that it is nonstationary time series <br> \n",
     "\n",
-    "Therefore, nonstationary time series can make it difficult to model and predict the series using traditional time series methods that assume stationarity, such as ARIMA models or simple regression"
+    "Therefore, nonstationary time series can make it difficult to model and predict the series using traditional time series methods that assume stationarity, such as ARIMA models or simple regression. It also violate the assumptions of standard regression methods."
    ]
   },
   {
@@ -147,10 +148,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ad62f4a-8331-46bf-b95f-ba3c79070582",
+   "metadata": {},
+   "source": [
+    "# Use Differencing to turn bitcoin price from nonstationary to stationary time series\n",
+    "Differencing  can help to stabilise the variance of a time series and the mean of a time series by removing changes in the level of a time series, and therefore eliminating (or reducing) trend "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "856907be",
    "metadata": {},
    "source": [
-    "If we change bitcoin price into precentage, we can get stationary time series. Therefore, due to stationary time series have a constant mean, variance, and autocorrelation structure over time, which allows for the use of standard regression methods such as ordinary least squares (OLS) and generalized linear models (GLMs)\n",
+    "If we change bitcoin price into precentage, we can get stationary time series. Therefore, due to stationary time series have a constant mean, variance, and autocorrelation structure over time, which allows for the use of standard regression methods such as ordinary least squares (OLS) and generalized linear models (GLMs) easier to model and make predictions.\n",
     "\n",
     "Therefore, after removing the trend, The ACF decay to zero relatively quickly as the lag increases. It shows that the time series of bitcoin price is no persistent correlation between observations at different points in time so that it's stationary."
    ]
