--- a/Bitcoin Prediction .ipynb
+++ b/Bitcoin Prediction .ipynb
@@ -107,7 +107,8 @@
     "Autocorrelation function (ACF) is used for determinate whether bitcoin price is stationary or nonstationary. <br> \n",
     "Due to the autocorrelation is remain nearly +1, it represents a strong linear relationship between each observation and its lagged value. Bitcoin price suggests that the time series is highly persistent and exhibits a strong trend so that it is nonstationary time series <br> \n",
     "\n",
-    "Therefore, nonstationary time series can make it difficult to model and predict the series using traditional time series methods that assume stationarity, such as ARIMA models or simple regression. It also violate the assumptions of standard regression methods."
+    "Therefore, nonstationary time series can make it difficult to model and predict the series using traditional time series methods that assume stationarity, such as ARIMA models or simple regression. It also violate the assumptions of Homoscedasticity of standard regression methods <br> \n",
+    "(Homoscedasticity : The variance of the errors should be constant across all levels of the independent variables)."
    ]
   },
   {
