--- a/Bitcoin Prediction .ipynb
+++ b/Bitcoin Prediction .ipynb
@@ -757,11 +757,11 @@
     "## Conclusion\n",
     "I select Voting without linear regression to predict bitcoin price because it has higher sharpe ratio and lowest MSE\n",
     "\r\n",
-    "|Method |Sharpe |MSE |\r\n",
+    " Method | Sharpe | MSE  |\r\n",
     "| --- | --- | --- |\r",
-    "Walk-forward validation| 0.11 |16.76 |\n",
+    "Walk-forward validation | 0.11 | 16.76 |\n",
     "| Voting with linear regression | 0.15 | 14.6 |\n",
-    "| Voting without linear regression | 0.19 | 14.34 |3 | |  |2: "
+    "| Voting without linear regression | 0.19| 14.34 |3 | |  |2: "
    ]
   },
   {
