--- a/Bitcoin Prediction .ipynb
+++ b/Bitcoin Prediction .ipynb
@@ -755,7 +755,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "I select Voting without linear regression to predict bitcoin price because it has higher sharpe ratio and lowest MSE\n",
+    "I select Voting without linear regression to predict bitcoin price because it has higher sharpe ratio and lowest MSE <br><br>\n",
     "\r\n",
     " Method | Sharpe | MSE  |\r\n",
     "| --- | --- | --- |\r",
